message section add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>জাবিইপা</title>
-    <link rel="shortcut icon" href="../image/juil.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!-- font awesome cdn link  -->
@@ -124,7 +124,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 </div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <a href="#" class="btn">ধার নিন</a>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 </div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -274,7 +274,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -291,7 +291,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -350,7 +350,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -367,7 +367,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -401,7 +401,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -418,7 +418,7 @@
                     </div>
                     <div class="content">
                         <h3>new arrivals</h3>
-                        <div class="price">$15.99 <span>$20.99</span></div>
+                        <div class="writer">লেখকঃ আরিফ আজাদ</div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
