Registration section add

--- a/registration.html
+++ b/registration.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>জাবিইপা</title>
-    <link rel="shortcut icon" href="../image/juil.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!-- font awesome cdn link  -->
@@ -22,7 +22,7 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    
+
     <!-- header section starts  -->
 
     <header class="header">
@@ -80,67 +80,86 @@
     </nav>
 
 
+    <div class="registration">
+        <div class="heading">
+            <h3>নতুন সদস্য নিবন্ধন</h3>
+        </div>
+        <div class="condition">
+            <h3>সদস্য হওয়ার নিয়মাবলীঃ</h3>
+            <p>১. পাঠাগার থেকে নির্ধারিত ফরম সংগ্রহ করে, যথাযথ পূরণ করে জমা দিতে হবে।</p>
+            <p>২. সদস্য ফি বাবদ কোনো টাকা প্রদান করতে হবে না। তবে যেকোনো পরিমাণ টাকা অথবা প্রয়োজনীয় বই দিলে তা সাদরে
+                গ্রহণ করা হবে।</p>
+            <p>৩. পাঠাগারের সাধারণ কার্য সভায় অবশ্যই উপস্থিত থাকতে হবে (বোনদের জন্য প্রযোজ্য নয়)।</p>
+            <p>৪. পাঠাগারের বিভিন্ন কার্যক্রমে স্বতঃস্ফূর্তভাবে অংশগ্রহণ করতে হবে। </p>
+            <p>৫. পাঠাগারের নিয়ম বহির্ভূত কোনো কার্যক্রমে জড়িত হলে তার সদস্য পদ বাতিল করা হবে।</p>
+        </div>
+        <div class="form">
+            <p>উপরিউক্ত শর্তসমূহে রাজি থাকলে নিচের ফরমটি ডাউনলোড করে, প্রিন্ট করে, পূরণ করে আমাদের কাছে জমা দেওয়ার
+                অনুরোধ জানাচ্ছি।</p>
+            <div class="download">
+                <input type="submit" value="Download From" name="send" class="btn">
+            </div>
+        </div>
+    </div>
 
 
+    <!-- footer section starts  -->
 
-    
+    <div class="footer">
 
-<!-- footer section starts  -->
+        <div class="box-container">
 
-<div class="footer">
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#home"> <i class="fas fa-arrow-right"></i> <b> হোম </b></a>
+                <a href="#featured"> <i class="fas fa-arrow-right"></i> <b> বইসমূহ </b></a>
+                <a href="#arrivals"> <i class="fas fa-arrow-right"></i> <b> নতুন বই </b></a>
+                <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> রিভিউ </b></a>
+                <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> নিবন্ধন </b></a>
+                <a href="#"> <i class="fas fa-arrow-right"></i> <b> যোগাযোগ </b></a>
+            </div>
 
-    <div class="box-container">
+            <div class="box">
+                <h3>About</h3>
+                <h2>"জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার - জাবিইপা"।
+                    <br>
+                    দাওয়াহ'ই মূল উদ্দেশ্য।
+                    পাঠাগার থেকে আপনার প্রয়োজনীয় বই বিনামূল্যে নিয়ে পড়তে পারবেন। আর চাইলে আপনার পছন্দের প্রয়োজনীয় বইটি
+                    পাঠাগারে উপহার দিতে পারবেন।
+                </h2>
 
-        <div class="box">
-            <h3>quick links</h3>
-            <a href="#home"> <i class="fas fa-arrow-right"></i> <b> হোম </b></a>
-            <a href="#featured"> <i class="fas fa-arrow-right"></i> <b> বইসমূহ </b></a>
-            <a href="#arrivals"> <i class="fas fa-arrow-right"></i> <b> নতুন বই </b></a>
-            <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> রিভিউ </b></a>
-            <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> নিবন্ধন </b></a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> <b> যোগাযোগ </b></a>
+            </div>
+
+            <div class="box">
+                <h3>contact info</h3>
+                <a href="#"> <i class="fas fa-phone"></i> <b> +8801518-306074</b></a>
+                <a href="#"> <i class="fa-solid fa-location-dot"></i> <b> রুম নম্বর ১২৪,
+                        <br> আ ফ ম কামালউদ্দীন হল,<br> জাহাঙ্গীরনগর বিশ্ববিদ্যালয়
+                    </b></a>
+                <!-- <a href="#"> <i class="fas fa-envelope"></i> <b>  </b></a> -->
+
+            </div>
+
         </div>
 
-        <div class="box">
-            <h3>About</h3>
-            <h2>"জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার - জাবিইপা"।
-                <br>
-                দাওয়াহ'ই মূল উদ্দেশ্য।
-                পাঠাগার থেকে আপনার প্রয়োজনীয় বই বিনামূল্যে নিয়ে পড়তে পারবেন। আর চাইলে আপনার পছন্দের প্রয়োজনীয় বইটি
-                পাঠাগারে উপহার দিতে পারবেন।
-            </h2>
-
+        <div class="share">
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
         </div>
-
-        <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> <b> +8801518-306074</b></a>
-            <a href="#"> <i class="fa-solid fa-location-dot"></i> <b> রুম নম্বর ১২৪, 
-                <br> আ ফ ম কামালউদ্দীন হল,<br> জাহাঙ্গীরনগর বিশ্ববিদ্যালয়
-            </b></a>
-            <!-- <a href="#"> <i class="fas fa-envelope"></i> <b>  </b></a> -->
-
+        <div class="credit">
+            ©২০২২ জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার (জাবিইপা) - সর্ব স্বত্ব সংরক্ষিত। কারিগরি সহায়তায় <a
+                href="#"><span>মোঃ শাকিল হোসেন</a></span>
         </div>
 
     </div>
 
-    <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-    </div>
-    <div class="credit">
-        ©২০২২ জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার (জাবিইপা) - সর্ব স্বত্ব সংরক্ষিত। কারিগরি সহায়তায় <a
-            href="#"><span>মোঃ শাকিল হোসেন</a></span>
-    </div>
+    <!-- footer section end  -->
 
-</div>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-
-<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-
-<!-- custom js file link  -->
-<script src="js/script.js"></script>
+    <!-- custom js file link  -->
+    <script src="js/script.js"></script>
 
 </body>
 
