Question and answer section add

--- a/answer.html
+++ b/answer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>যোগাযোগ - জাবিইপা</title>
+    <title>প্রশ্ন ও উত্তর - জাবিইপা</title>
     <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -46,6 +46,9 @@
         <div class="header-2">
 
             <nav class="navbar">
+                <!-- <a href="#" class="logo">
+                    <img src="../library/image/juil-1.png" alt="logo">
+                </a> -->
                 <a href="#home">হোম</a>
                 <a href="#featured">বইসমূহ</a>
                 <a href="#arrivals">নতুন বই</a>
@@ -73,27 +76,15 @@
     </nav>
 
 
-
-    <div class="contact">
+    <div class="answer">
         <div class="heading">
-            <h3>যে কোন তথ্য জানতে</h3>
+            <h3>সাধারণ প্রশ্ন ও উত্তর</h3>
+        </div>
+        <div class="question">
+            <h3>কাজ চলছে। খুব শীঘ্রই আপডেট আসবে ইন শা আল্লাহ।</h3>
+            <!-- <p>প্রশ্ন: পাঠাগারে কি কি বই আছে?</p> -->
         </div>
     </div>
-
-    <section class="contact">
-
-        <form action="" method="post">
-            <h3 class="cnt">আপনার যে কোন জিজ্ঞাসা নিম্নোক্ত ফর্মে পূরণ করে আমাদের কাছে পাঠিয়ে দিন। আমরা শীঘ্রই আপনার
-                সাথে যোগাযোগ করবো ইন শা আল্লাহ। </h3>
-            <input type="text" name="name" required placeholder="Your Name" class="box">
-            <input type="email" name="email" required placeholder="Your Email" class="box">
-            <input type="number" name="number" required placeholder="Phone Number" class="box">
-            <textarea name="message" class="box" placeholder="Write your message...." id="" cols="30"
-                rows="10"></textarea>
-            <input type="submit" value="send message" name="send" class="btn">
-        </form>
-
-    </section>
 
 
     <!-- footer section starts  -->
@@ -147,6 +138,7 @@
 
     </div>
 
+    <!-- footer section end  -->
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
