--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
         <div class="header-2">
 
             <nav class="navbar">
-                <!-- <a href="#" class="logo">
-                    <img src="../library/image/juil-1.png" alt="logo">
-                </a> -->
                 <a href="#home">হোম</a>
                 <a href="#featured">বইসমূহ</a>
                 <a href="#arrivals">নতুন বই</a>
-                <a href="#reviews">রিভিউ</a>
+                <!-- <a href="#reviews">রিভিউ</a> -->
+                <a href="#answer">প্রশ্ন ও উত্তর</a>
                 <a href="#registration">নিবন্ধন</a>
                 <a href="#communication">যোগাযোগ</a>
                 <a href="#login">লগইন</a>
@@ -69,7 +67,8 @@
         <a href="#home" class="fas fa-home"></a>
         <a href="#featured" class="fas fa-list"></a>
         <a href="#arrivals" class="fas fa-tags"></a>
-        <a href="#reviews" class="fas fa-comments"></a>
+        <!-- <a href="#reviews" class="fas fa-comments"></a> -->
+        <a href="#answer" class="fa-sharp fa-solid fa-question"></a>
         <a href="#communication" class="fas fa-envelope"></a>
         <a href="#registration" class="fa-solid fa-user-plus"></a>
         <a href="#login" class="fas fa-user"></a>
@@ -440,7 +439,7 @@
 
     <!-- reviews section starts  -->
 
-    <section class="reviews" id="reviews">
+    <!-- <section class="reviews" id="reviews">
 
         <h1 class="heading"> <span>রিভিউ</span> </h1>
 
@@ -535,7 +534,7 @@
 
         </div>
 
-    </section>
+    </section> -->
 
     <!-- reviews section ends -->
 
