--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>জাবিইপা</title>
+    <title>নিবন্ধন - জাবিইপা</title>
     <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -18,10 +18,6 @@
 </head>
 
 <body>
-    <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
-    </div>
-
 
     <!-- header section starts  -->
 
