--- a/registration.html
+++ b/registration.html
@@ -46,15 +46,13 @@
         <div class="header-2">
 
             <nav class="navbar">
-                <!-- <a href="#" class="logo">
-                    <img src="../library/image/juil-1.png" alt="logo">
-                </a> -->
-                <a href="#home">হোম</a>
-                <a href="#featured">বইসমূহ</a>
-                <a href="#arrivals">নতুন বই</a>
-                <a href="#reviews">রিভিউ</a>
-                <a href="#registration">নিবন্ধন</a>
-                <a href="#communication">যোগাযোগ</a>
+                <a href="/index.html">হোম</a>
+                <a href="/index.html#featured">বইসমূহ</a>
+                <a href="/index.html#arrivals">নতুন বই</a>
+                <!-- <a href="#reviews">রিভিউ</a> -->
+                <a href="/answer.html">প্রশ্ন ও উত্তর</a>
+                <a href="/registration.html">নিবন্ধন</a>
+                <a href="/contact.html">যোগাযোগ</a>
                 <a href="#login">লগইন</a>
             </nav>
         </div>
@@ -69,9 +67,10 @@
         <a href="#home" class="fas fa-home"></a>
         <a href="#featured" class="fas fa-list"></a>
         <a href="#arrivals" class="fas fa-tags"></a>
-        <a href="#reviews" class="fas fa-comments"></a>
-        <a href="#communication" class="fas fa-envelope"></a>
-        <a href="#registration" class="fa-solid fa-user-plus"></a>
+        <a href="/answer.html" class="fa-sharp fa-solid fa-question"></a>
+        <!-- <a href="#reviews" class="fas fa-comments"></a> -->
+        <a href="/contact.html" class="fas fa-envelope"></a>
+        <a href="/registration.html" class="fa-solid fa-user-plus"></a>
         <a href="#login" class="fas fa-user"></a>
     </nav>
 
@@ -107,12 +106,9 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="#home"> <i class="fas fa-arrow-right"></i> <b> হোম </b></a>
-                <a href="#featured"> <i class="fas fa-arrow-right"></i> <b> বইসমূহ </b></a>
-                <a href="#arrivals"> <i class="fas fa-arrow-right"></i> <b> নতুন বই </b></a>
-                <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> রিভিউ </b></a>
-                <a href="#reviews"> <i class="fas fa-arrow-right"></i> <b> নিবন্ধন </b></a>
-                <a href="#"> <i class="fas fa-arrow-right"></i> <b> যোগাযোগ </b></a>
+                <a href="/index.html#home"> <i class="fas fa-arrow-right"></i> <b> হোম </b></a>
+                <a href="/index.html#featured"> <i class="fas fa-arrow-right"></i> <b> বইসমূহ </b></a>
+                <a href="/index.html#arrivals"> <i class="fas fa-arrow-right"></i> <b> নতুন বই </b></a>
             </div>
 
             <div class="box">
