--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,6 @@
                 <a href="#"> <i class="fa-solid fa-location-dot"></i> <b> রুম নম্বর ১২৪,
                         <br> আ ফ ম কামালউদ্দীন হল,<br> জাহাঙ্গীরনগর বিশ্ববিদ্যালয়
                     </b></a>
-                <!-- <a href="#"> <i class="fas fa-envelope"></i> <b>  </b></a> -->
 
             </div>
 
@@ -141,7 +140,7 @@
         </div>
         <div class="credit">
             ©২০২২ জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার (জাবিইপা) - সর্ব স্বত্ব সংরক্ষিত। কারিগরি সহায়তায় <a
-                href="#"><span>মোঃ শাকিল হোসেন</a></span>
+                href="https://sites.google.com/view/shakiliitju/home"><span>মোঃ শাকিল হোসেন</a></span>
         </div>
 
     </div>
