--- a/registration.html
+++ b/registration.html
@@ -92,7 +92,7 @@
             <p>উপরিউক্ত শর্তসমূহে রাজি থাকলে নিচের ফরমটি ডাউনলোড করে, প্রিন্ট করে, পূরণ করে আমাদের কাছে জমা দেওয়ার
                 অনুরোধ জানাচ্ছি।</p>
             <div class="download">
-                <input type="submit" value="Download From" name="send" class="btn">
+                <input type="submit" value="Download Form" name="send" class="btn">
             </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
         </div>
         <div class="credit">
             ©২০২২ জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ইসলামি পাঠাগার (জাবিইপা) - সর্ব স্বত্ব সংরক্ষিত। কারিগরি সহায়তায় <a
-                href="#"><span>মোঃ শাকিল হোসেন</a></span>
+                href="https://sites.google.com/view/shakiliitju/home"><span>মোঃ শাকিল হোসেন</a></span>
         </div>
 
     </div>
