--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <div class="header-2">
 
             <nav class="navbar">
-                <a href="#home">হোম</a>
-                <a href="#featured">বইসমূহ</a>
-                <a href="#arrivals">নতুন বই</a>
+                <a href="/index.html#home">হোম</a>
+                <a href="/index.html#featured">বইসমূহ</a>
+                <a href="/index.html#arrivals">নতুন বই</a>
                 <!-- <a href="#reviews">রিভিউ</a> -->
                 <a href="/answer.html">প্রশ্ন ও উত্তর</a>
                 <a href="/registration.html">নিবন্ধন</a>
