--- a/registration.html
+++ b/registration.html
@@ -64,9 +64,9 @@
     <!-- bottom navbar  -->
 
     <nav class="bottom-navbar">
-        <a href="#home" class="fas fa-home"></a>
-        <a href="#featured" class="fas fa-list"></a>
-        <a href="#arrivals" class="fas fa-tags"></a>
+        <a href="/index.html#home" class="fas fa-home"></a>
+        <a href="/index.html#featured" class="fas fa-list"></a>
+        <a href="/index.html#arrivals" class="fas fa-tags"></a>
         <a href="/answer.html" class="fa-sharp fa-solid fa-question"></a>
         <!-- <a href="#reviews" class="fas fa-comments"></a> -->
         <a href="/contact.html" class="fas fa-envelope"></a>
