--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>জাবিইপা</title>
-    <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!-- font awesome cdn link  -->
@@ -25,7 +25,7 @@
         <div class="header-1">
             <div class="logo">
                 <a href="#">
-                    <img src="../image/juil-logo.png" alt="logo">
+                    <img src="image/juil-logo.png" alt="logo">
                 </a>
             </div>
 
@@ -771,22 +771,22 @@
         <div class="container">
             <div class="counter-grid">
                 <div class="counter-item">
-                    <img src="../image/books.png" alt="Image" class="counter-img" />
+                    <img src="image/books.png" alt="Image" class="counter-img" />
                     <h1 class="counter" data-target="169">0</h1>
                     <h1>মোট বই</h1>
                 </div>
                 <div class="counter-item">
-                    <img src="../image/sudent.png" alt="Image" class="counter-img" />
+                    <img src="image/sudent.png" alt="Image" class="counter-img" />
                     <h1 class="counter" data-target="15">0</h1>
                     <h1>ছাত্র সদস্য</h1>
                 </div>
                 <div class="counter-item">
-                    <img src="../image/female-student.png" alt="Image" class="counter-img" />
+                    <img src="image/female-student.png" alt="Image" class="counter-img" />
                     <h1 class="counter" data-target="15">0</h1>
                     <h1>ছাত্রী সদস্য</h1>
                 </div>
                 <div class="counter-item">
-                    <img src="../image/member.png" alt="Image" class="counter-img" />
+                    <img src="image/member.png" alt="Image" class="counter-img" />
                     <h1 class="counter" data-target="30">0</h1>
                     <h1>মোট সদস্য</h1>
                 </div>
