--- a/registration.html
+++ b/registration.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>নিবন্ধন - জাবিইপা</title>
-    <link rel="shortcut icon" href="../image/juil-logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/juil-logo.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!-- font awesome cdn link  -->
@@ -25,7 +25,7 @@
         <div class="header-1">
             <div class="logo">
                 <a href="#">
-                    <img src="../image/juil-logo.png" alt="logo">
+                    <img src="image/juil-logo.png" alt="logo">
                 </a>
             </div>
 
