--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <nav class="bottom-navbar">
         <a href="#home" class="fas fa-home"></a>
-        <a href="#featured" class="fas fa-list"></a>
-        <a href="#arrivals" class="fas fa-tags"></a>
+        <!-- <a href="#featured" class="fas fa-list"></a> -->
+        <!-- <a href="#arrivals" class="fas fa-tags"></a> -->
         <!-- <a href="#reviews" class="fas fa-comments"></a> -->
         <a href="/answer.html" class="fa-sharp fa-solid fa-question"></a>
         <a href="/contact.html" class="fas fa-envelope"></a>
