--- a/answer.html
+++ b/answer.html
@@ -65,8 +65,8 @@
 
     <nav class="bottom-navbar">
         <a href="/index.html#home" class="fas fa-home"></a>
-        <a href="/index.html#featured" class="fas fa-list"></a>
-        <a href="/index.html#arrivals" class="fas fa-tags"></a>
+        <!-- <a href="/index.html#featured" class="fas fa-list"></a> -->
+        <!-- <a href="/index.html#arrivals" class="fas fa-tags"></a> -->
         <a href="/answer.html" class="fa-sharp fa-solid fa-question"></a>
         <!-- <a href="#reviews" class="fas fa-comments"></a> -->
         <a href="/contact.html" class="fas fa-envelope"></a>
@@ -80,8 +80,29 @@
             <h3>সাধারণ প্রশ্ন ও উত্তর</h3>
         </div>
         <div class="question">
-            <h3>কাজ চলছে। খুব শীঘ্রই আপডেট আসবে ইন শা আল্লাহ।</h3>
-            <!-- <p>প্রশ্ন: পাঠাগারে কি কি বই আছে?</p> -->
+            <h3>প্রশ্ন ১: পাঠাগারে কি কি বই আছে?</h3>
+            <p><b>উত্তর: </b>পাঠাগারে কুরআন, হাদীস, ফিকহ, সিরাত ও ইতিহাসসহ বিভিন্ন বিষয়ের অনেক বই আছে। বইয়ের তালিকা
+                দেখতে নিচের View বাটন চাপুন।</p>
+            <div class="view">
+                <a href="https://docs.google.com/document/d/1JGb3cvWrUHpUeILhK5oZRa8dACTws9k1FBXynJnomMU/edit?usp=drivesdk&fbclid=IwAR0GuiVil6aNKayOWfdKzcBz0Cx-TeGACq2ItquBuzuWHknEy9Im6WVCzdI"><input type="submit" value="View" name="send" class="btn"></a>
+            </div>
+            <h3>প্রশ্ন ২: পাঠাগারের অবস্থান কোথায়?</h3>
+            <p><b>উত্তর: </b>পাঠাগারের অস্থায়ী অবস্থান- রুম নম্বর #১২৪, আ ফ ম কামালউদ্দীন হল, জাহাঙ্গীরনগর
+                বিশ্ববিদ্যালয়।</p>
+            <h3>প্রশ্ন ৩: বই কি যেকোন কেউ নিতে পারবে?</h3>
+            <p><b>উত্তর: </b>না। শুধুমাত্র জাহাঙ্গীরনগর বিশ্ববিদ্যালয় ক্যাম্পাসের যে কেউ বিনামূল্যে বই নিতে পারবেন।</p>
+            <h3>প্রশ্ন ৪: একসাথে সর্বোচ্চ কয়টি বই নেয়া যাবে।</h3>
+            <p><b>উত্তর: </b> একসাথে সর্বোচ্চ ২ টি বই নেয়া যাবে।</p>
+            <h3>প্রশ্ন ৫: নিবন্ধন করতে টাকা লাগবে কি?</h3>
+            <p><b>উত্তর: </b> না। কোন টাকা লাগবে না।</p>
+            <h3>প্রশ্ন ৬: কিভাবে বই নিতে পারি?</h3>
+            <p><b>উত্তর: </b>বই নেয়ার নিয়মাবলী হলো-</br>
+                </br>১. নিবন্ধন করে পাঠাগারের সদস্য হতে হবে।
+                </br>২. বই পাঠাগার থেকে সংগ্রহ করতে হবে।
+                </br>৩. বই নেয়ার সময় বইয়ের কলেবর বিবেচনায় সম্ভাব্য তারিখ নির্ধারণ করা হবে এবং সে তারিখের মধ্যে বই জমা
+                দিতে হবে।
+                </br>৪. বই হারিয়ে গেলে বা কোনো কারণে অব্যবহারযোগ্য হলে তার দায়ভার গ্রহণকারীকে নিতে করতে হবে।
+                </br></br>উপরোক্ত নিয়মাবলী মেনে বই নিতে পারবেন ইন শা আল্লাহ।</p></br>
         </div>
     </div>
 
